# MyMachine

./: .env  .gitmodules  AIrecipe.py  AIrecipeTEST.py  KNOWNISSUES.txt  LICENSE.md  PROGRESS.txt  api-docs.yaml  data.json  fluidcheck.py  init.sh  package-lock.json  package.json  pyproject.toml  server.js  server.py  test.py  vectorcreate.py
GUI/: form.js  index.css  index.html  loadrecipes.js  page2.css  page2.html  page3.css  page3.html
vectorclient/d2e9874d-c4de-4f2c-9f6d-8447496e2e5f/: index_metadata.pickle
wetransfer_gui_2026-05-19_0543/GUI/: index.css  index.html  loadrecipes.js  page2.css  page2.html  page3.css  page3.html
