[project]
name = "mymachine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argostranslate>=1.10.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
